# kapacitor

./: .gitignore  ALERT_DESIGN.md  BLOB_STORE_DESIGN.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  Dockerfile.bak  Dockerfile_build  Dockerfile_build_alpine  Dockerfile_build_ubuntu32  Dockerfile_build_ubuntu64  Dockerfile_build_ubuntu64_git  Godeps  Gopkg.toml  LICENSE_OF_DEPENDENCIES.md  Loggers  Makefile  README.md  TUTORIAL.md  alert.go  apply.go  autoscale.go  barrier.go  batch.go  build.py  build.sh  change_detect.go  checkfmt.sh  circle-test.sh  circle.yml  circularqueue.gen.go.tmpl  circularqueue.gen_test.go  circularqueue.go  circularqueue_test.go  combine.go  combine_test.go  default.go  delete.go  deps  (+74 more)
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.hooks/: pre-commit
Godeps/: Godeps.json
alert/: DESIGN.md  HANDLERS.md  doc.go  inhibit.go  inhibit_test.go  topics.go  types.go
auth/: auth.go  auth_test.go
bufpool/: bufpool.go
builder/: Dockerfile_build  Dockerfile_build_push.sh  README.md
client/: API.md
clock/: clock.go  clock_test.go
command/: command.go
dsl/: doc.go  example_scope_test.go  lex.go  lex_test.go  node.go  node_test.go  parser.go  parser_test.go  scope.go  scope_test.go
edge/: buffered.go  consumer.go  doc.go  edge.go  edge_test.go  error.go  forwarding.go  grouped.go  log.go  messages.go  stats.go  timed.go
expr/: doc.go  (+5 more)
udf/agent/py/: agent.py  pyproject.toml  setup.py  udf_pb2.py
udf/agent/py/kapacitor/udf/: __init__.py  agent.py  udf_pb2.py
udf/agent/py/kapacitor/udf/agent/: __init__.py
(+839 files in other folders)
